objects/Outbound_Call_Case_Automation__c.object
<CustomObject>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Notes_Contains__c</fullName>
        <label>Sales Notes Contains</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Script_URL__c</fullName>
        <label>Script URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Account_Revenue__c</fullName>
        <label>Total Account Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validation_Order__c</fullName>
        <label>Validation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_Type__c</fullName>
        <label>Website Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winback_CSC_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winback CSC Script</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Outbound Call Case Automation</label>
</CustomObject>